feat: upgrade evaluateExpression using JDK JDI ExpressionParser (H14)