@@ -11,6 +11,12 @@ dependencies {
     testImplementation(libs.kotlin.test)
 }
 
+tasks.withType<JavaCompile> {
+    options.compilerArgs.addAll(listOf(
+        "--add-exports", "jdk.jdi/com.sun.tools.example.debug.expr=ALL-UNNAMED"
+    ))
+}
+
 tasks.test {
     useJUnitPlatform()
     jvmArgs(
@@ -18,7 +24,8 @@ tasks.test {
         "--add-opens", "jdk.jdi/com.sun.jdi.connect=ALL-UNNAMED",
         "--add-opens", "jdk.jdi/com.sun.jdi.event=ALL-UNNAMED",
         "--add-opens", "jdk.jdi/com.sun.jdi.request=ALL-UNNAMED",
-        "--add-opens", "jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED"
+        "--add-opens", "jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED",
+        "--add-exports", "jdk.jdi/com.sun.tools.example.debug.expr=ALL-UNNAMED"
     )
     finalizedBy(tasks.jacocoTestReport)
 }
